<?xml version="1.0" encoding="utf-8"?>
<!--TODO:Add screen filler-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg2"
    android:fitsSystemWindows="true">
    <TextView
        android:id="@+id/infoText1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/infoString1"/>
    <TextView
        android:id="@+id/infoText2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/infoString2"/>
    <TextView
        android:id="@+id/questionText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/answerEntered"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/questionText"
        android:layout_centerHorizontal="true"
        android:hint="@string/editZip"
        android:textSize="20dp"
        android:singleLine = "true"
        android:imeOptions = "actionDone"
        />
    <Button
        android:id="@+id/buttonConfirm1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/answerEntered"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonConfirm"
        />
    <TextView
        android:id="@+id/confirmEmailText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/textEmail"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp" />

    <EditText
        android:id="@+id/confirmEmailEntered"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_toRightOf="@id/confirmEmailText"
        android:layout_alignTop="@id/confirmEmailText"
        android:layout_marginLeft="16dp"
        android:hint="@string/confirmEmailEntered"
        android:textSize="20sp"
        android:singleLine = "true"
        android:imeOptions = "actionDone"
        />

    <Button
        android:id="@+id/buttonConfirm2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/confirmEmailEntered"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/confirmEmail"
        />
</RelativeLayout>