<?xml version="1.0" encoding="utf-8"?>
<!--TODO:Add description of what ad does to fill screen-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg2"
    android:fitsSystemWindows="true">
    <TextView
        android:id="@+id/displayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="150dp"
        />
    <EditText
        android:id="@+id/discountEdit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/displayInfo"
        android:layout_centerHorizontal="true"
        android:hint="@string/discountEdit"
        android:textSize="20sp"
        android:singleLine = "true"
        android:imeOptions = "actionDone"
        />
    <TextView
        android:id="@+id/costDisplay"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/discountEdit"
        android:text="@string/costInit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/adConfirm"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/costDisplay"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_toRightOf="@id/adCancel"
        android:text="@string/buttonAdConfirm"
        />
    <Button
        android:id="@+id/adCancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/costDisplay"
        android:layout_alignBottom="@+id/adConfirm"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/buttonCancel"
        />
</RelativeLayout>