<?xml version="1.0" encoding="utf-8"?>
<!--TODO:Hardcode fake restaurant-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/announce"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/dummyText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/rest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/announce"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/chitchat"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/rest"
        android:text="@string/chitchat"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/toDeliv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/chitchat"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/link"
        />
</RelativeLayout>